--- a/DesignerRHN/DesignerRHN-war/web/Ciudades.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Ciudades.xhtml
@@ -129,7 +129,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 315px; margin: -14px; height: 26px; border: none; color: blue" value=" " id="fooDepartamentos" />
+                                        <p:commandButton style="width: 315px; margin: -14px; height: 26px; border: none; color: blue" value=" " action="departamento" id="fooDepartamentos" />
                                     </f:facet>
                                 </p:column>
                                 <p:column headerText="#{msg['codigoalternativo']}" sortBy="#{ciudades.codigoalternativo}" filterBy="#{ciudades.codigoalternativo}" filterMatchMode="contains" id="ciudadesCodigosAlternativos" width="50" filterStyle="display: none; visibility: hidden;" >                                  
