--- a/DesignerRHN/DesignerRHN-war/web/acercade.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/acercade.xhtml
@@ -109,7 +109,7 @@
                                 <p:tooltip style="" for="rastro" value="Rastro"/>
                             </p:toolbarGroup>  
                         </p:toolbar> 
-                        <p:commandButton style="position: absolute; left: 780px; top: 420px;  font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="ACEPTAR" onclick="confirmarGuardar.show();" process="@this" />
+                        <p:commandButton style="position: absolute; left: 780px; top: 420px;  font-family: Arial, Helvetica, sans-serif;" icon="ui-icon-check" id="ACEPTAR" value="ACEPTAR" action="atrasAcercaDe" process="@this" />
                     </p:panel>
 
                     <p:hotkey bind="alt+p" actionListener="#{controlAcercaDe.lovEmpresas()}"/> 
