--- a/DesignerRHN/DesignerRHN-war/web/bienestar.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/bienestar.xhtml
@@ -12,13 +12,13 @@
             <ui:define name="body">                  
                 <h:form id="form"> 
                     <f:loadBundle basename="Recursos.bienestar" var="msg" />
-                    <p:panel  id="PanelTotal" header="#{msg['titulo']} #{controlBienestar.bienestar}" style="position: absolute; width: 874px; height: 510px; text-align: left">  
+                    <p:panel  id="PanelTotal" header="#{msg['titulo']} #{controlb}" style="position: absolute; width: 874px; height: 510px; text-align: left">  
                         <fieldset style="position: absolute; left: 10px; top: 35px;  width: 835px; height: 410px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue"><strong>#{msg['plan']}</strong></legend>
                             <p:commandButton style="background: url(Imagenes/interrogante.gif)  ;border-color:#045491; width:65px ; height: 75px ; border-width: 2px; position: absolute;top: 15px;left: 10px" value=" "></p:commandButton>
                             <h:outputText value="#{msg['necesidades']}" style="position: absolute;left: 95px ; top: 20px; color: #045491; font-size: 16px"/>
                             <h:outputText value="#{msg['necesidadestexto']}" style="position: absolute;left: 100px ; top: 45px ; color: #000000; font-size: 14px"/>
-                            
+
                             <p:commandButton style=" background: url(Imagenes/evaluacion1.gif); border-color:#045491; width:65px ; height: 75px ; border-width: 2px; position: absolute;top: 95px;left: 10px" value=" "></p:commandButton>
                             <h:outputText value="#{msg['programacion']}" style="position: absolute;left: 95px ; top: 100px; color: #045491; font-size: 16px"/>
                             <h:outputText value="#{msg['programaciontexto']}" style="position: absolute;left: 100px ; top: 125px; color: #000000; font-size: 14px"/>
@@ -33,13 +33,13 @@
                             <h:outputText value="#{msg['ayetexto']}" style="position: absolute;left: 100px ; top: 280px; color: #000000; font-size: 14px"/>
 
 
-                            <p:commandButton style="background: url(Imagenes/reportesboton.gif);border-color:#045491; width:65px ; height: 75px ; border-width: 2px; position: absolute;top: 335px;left: 10px" value=" "></p:commandButton>
+                            <p:commandButton style="background: url(Imagenes/reportesboton.gif);border-color:#045491; width:65px ; height: 75px ; border-width: 2px; position: absolute;top: 335px;left: 10px" action="reporteBienestar" value=" "></p:commandButton>
                             <h:outputText value="#{msg['reportes']}" style="position: absolute;left: 95px ; top: 335px; color: #045491; font-size: 16px"/>
                             <h:outputText value="#{msg['reportestexto']}" style="position: absolute;left: 100px ; top: 360px; color: #000000; font-size: 14px"/>
 
                         </fieldset>
-                        <p:commandButton style=" position: absolute; left: 688px; top: 470px;  " icon="ui-icon-check" id="ACEPTAR" value="#{msg['aceptar']}" process="@this"   />
-                        <p:commandButton style=" position: absolute; left: 785px; top: 470px;  " icon="ui-icon-closethick" id="ATRAS" value="#{msg['atras']}"/>
+                        <p:commandButton style=" position: absolute; left: 688px; top: 470px;  " icon="ui-icon-check" action="atrasNominaFBienestar" id="ACEPTAR" value="#{msg['aceptar']}" process="@this"   />
+                        <p:commandButton style=" position: absolute; left: 785px; top: 470px;  " icon="ui-icon-closethick" action="atrasNominaFBienestar" id="ATRAS" value="#{msg['atras']}"/>
 
                     </p:panel>
                 </h:form>
