--- a/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/cargo.xhtml
@@ -468,7 +468,7 @@
                                         </f:facet>   
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 130px; margin: -14px; height: 26px; border: none; color: blue" id="fooEnfoque"  value=" "/>
+                                        <p:commandButton style="width: 130px; margin: -14px; height: 26px; border: none; color: blue" id="fooEnfoque"  action="cargo" value=" "/>
                                     </f:facet>
                                 </p:column>
 
