--- a/DesignerRHN/DesignerRHN-war/web/vigenciadeporte.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/vigenciadeporte.xhtml
@@ -94,7 +94,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooDescripcion" value=" "/>
+                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooDescripcion" action="deporte" value=" "/>
                                     </f:facet>
                                 </p:column>  
 
