--- a/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
@@ -281,7 +281,7 @@
 
                         <p:commandButton style="position: absolute; left: 9px; top: 378px;" id="grupoConcepto" value="#{msg['grupoconceptos']}" process="@this" />
                         <p:commandButton style="position: absolute; left: 160px; top: 378px;" id="conceptoRedondeos" value="#{msg['conceptosredondeos']}"  process="@this" />
-                        <p:commandButton style="position: absolute; left: 340px; top: 378px;" id="unidadesConcepto" value="#{msg['unidadconcepto']}"  process="@this" />
+                        <p:commandButton style="position: absolute; left: 340px; top: 378px;" id="unidadesConcepto" action="conceptosoporte" value="#{msg['unidadconcepto']}"  process="@this" />
                         <p:commandButton style="position: absolute; left: 620px; top: 378px;" id="buscarConcepto" value="#{msg['buscar']}" actionListener="#{controlConcepto.lovConcepto(0)}" process="@this" />
                         <p:commandButton style="position: absolute; left: 755px; top: 378px;" disabled="#{controlConcepto.mostrarTodos}" id="mostrarTodos" actionListener="#{controlConcepto.mostrarTodosConceptos()}" value="#{msg['mostrar']}" process="@this" />
 
