--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
@@ -143,7 +143,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooTipoCotizante" value=""/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" action="clasepension" process="@this" actionListener="#{controlClasesPensiones.recibirAtras('atrasEmplVigenciaTipoTrabajadorClasePension')}" id="fooTipoCotizante" value=""/>
                                     </f:facet>
                                 </p:column> 
                             </p:dataTable>  
