--- a/DesignerRHN/DesignerRHN-war/web/emplvigsaludocupacional.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigsaludocupacional.xhtml
@@ -39,7 +39,7 @@
                             <p:commandButton style="border-color:#045491; border-width: 2px; position: absolute;top: 20px;left: 235px" value="[Servicios]" ></p:commandButton>
 
                         </fieldset>
-                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 270px;left: 740px" value="Atras" ></p:commandButton>
+                        <p:commandButton icon="ui-icon-arrowreturnthick-1-w" style="position: absolute;top: 270px;left: 740px" value="Atras" action="atrasemplvigsaludocupacional" ></p:commandButton>
 
                     </p:panel>
                 </h:form>
