--- a/DesignerRHN/DesignerRHN-war/web/Cuenta.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Cuenta.xhtml
@@ -25,7 +25,7 @@
                             <p:dataTable id="datosCuenta" var="infoC" rowKey="#{infoC.secuencia}" rowIndexVar="indice" style="border: 1px;width: 830px"   
                                          value="#{controlCuenta.listCuentas}" scrollable="true" scrollHeight="#{controlCuenta.altoTabla}" scrollWidth="830"
                                          filteredValue="#{controlCuenta.filtrarListCuentas}" emptyMessage="#{msg['vacio']}"
-                                         editable="true" editMode="cell" liveScroll="true" scrollRows="20">
+                                         editable="true" editMode="cell" >
 
                                 <p:ajax event="filter" listener="#{controlCuenta.eventoFiltrar()}"/>
 
