--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -36,7 +36,8 @@
                             <fieldset style="position: absolute; left: 5px;top: 343px ;height: 71px; width: 225px;;height:40px ; border-radius: 10px">
                                 <legend style=" color: blue"><strong>Archivo Plano</strong></legend>
                                 <h:graphicImage value="Imagenes/archivoplanoNovedad.gif" style="position: absolute; top: 15px; left: 10px; width: 25px  ; height: 31px "/>
-                                <p:commandButton style="position: absolute;top:18px;left: 45px; width: 180px; height: 25px; " value="Cargue De Novedades" actionListener="#{controlNovedad.recibir('Cargue De Novedades')}" action="novedadPlano"></p:commandButton>
+                                <p:commandButton style="position: absolute;top:18px;left: 45px; width: 180px; height: 25px; " value="Cargue De Novedades" action="novedadPlano">
+                                </p:commandButton>
                             </fieldset>
                             <fieldset style="position: absolute; left: 265px;height: 250px; width: 265px; border-radius: 10px">
                                 <legend style=" color: blue"><strong>Administracion De Tiempos</strong></legend>
