--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaEvento.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaEvento.xhtml
@@ -95,7 +95,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooDescripcion" value=" "/>
+                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" id="fooDescripcion" value=" " action="evento" />
                                     </f:facet>
                                 </p:column>  
 
